# differentiable-robot-model

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  requirements.txt  setup.py
.circleci/: config.yml
conf/: fetch_robot_model.yaml  torch_robot_model_gt.yaml  torch_robot_model_gt_panda.yaml  torch_robot_model_gt_panda_no_gripper.yaml  torch_robot_model_gt_toy.yaml  torch_robot_model_learnable_dynamics.yaml  torch_robot_model_learnable_kinematics.yaml  torch_robot_model_learnable_kinematics_panda.yaml  torch_robot_model_learnable_kinematics_toy.yaml  torch_robot_model_learnable_l4dc_constraints.yaml  torch_robot_model_learnable_l4dc_no_constraints.yaml
diff_robot_data/: 2link_robot.urdf
differentiable_robot_model/: __init__.py  coordinate_transform.py  data_generation_utils.py  data_utils.py  differentiable_rigid_body.py  differentiable_robot_model.py  rigid_body.py  rigid_body_parametrizations.py  rigid_body_params.py  robot_model.py  se3_so3_util.py  spatial_vector_algebra.py  urdf_utils.py  utils.py
docs/: README.md  conf.py  index.html  index.rst
examples/: forward_dynamics_iiwa.py  learn_dynamics_iiwa.py  learn_forward_dynamics_iiwa.py  learn_kinematics_of_iiwa.py  learn_kinematics_of_panda.py  learn_kinematics_of_toy.py  panda_test.py  run_kinematic_trajectory_opt.py  simple_sim_wrapper.py  test_nan.py
experiments/: l4dc-sim-exps.ipynb
robot_data/: 2link_robot.urdf  2link_robot2.urdf  panda.urdf
robot_data/panda_description/: CHANGELOG.rst  CMakeLists.txt  package.xml
robot_data/panda_description/urdf/: panda.urdf
(+49 files in other folders)
